# python-tool

./: .gitignore  README.md  batch_doc_to_txt_windows.py  clipboard_modifier.py  docx_civil_code_parser.py  download_laws.py  export_mysql_to_excel.py  import_sql_to_mysql.py  json_processor.py  parse_civil_code_docx.py  parse_civil_code_pdf.py  pdf_civil_code_parser.py  pyproject.toml  sync_uploaded_files_from_api.py  upload_to_knowledge_base.py  uploaded_files_log.json  民法典解析结果.json  民法典解析结果_processed.json
local_file/: 1.中华人民共和国民法典.docx
