[tool.poetry]
name = "python-tool"
version = "0.1.0"
description = "Python工具集 - 包含民法典解析器等实用工具"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "python_tool", from = "."}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.0.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
pydantic = "^2.0.0"
python-docx = "^1.2.0"
pypdf2 = "^3.0.1"
pdfplumber = "^0.11.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
pre-commit = "^3.4.0"

[tool.poetry.scripts]
civil-code-parser = "civil_code_parser:main"
env-example = "env_example:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
