[tool.poetry]
name = "python-tool"
version = "0.1.0"
description = "Python工具集 - 包含民法典解析器等实用工具"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "python_tool", from = "."}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.0.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
pydantic = "^2.0.0"
python-docx = "^1.2.0"
pypdf2 = "^3.0.1"
pdfplumber = "^0.11.7"
pywin32 = "^306"
docx2txt = "^0.8"
pyperclip = "^1.8.2"
pandas = "^2.3.3"
pymysql = "^1.1.2"
openpyxl = "^3.1.5"
sqlalchemy = "^2.0.44"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
pre-commit = "^3.4.0"

[tool.poetry.scripts]
civil-code-parser = "civil_code_parser:main"
env-example = "env_example:main"
doc-converter = "batch_doc_to_docx_converter:main"
doc-extractor = "batch_doc_to_txt_extractor:main"
doc-extractor-no-com = "batch_doc_to_txt_no_com:main"
doc-batch-processor = "batch_doc_to_txt_batch_processor:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
